# self_registrator

./: CMakeLists.txt  README.md  define.hpp  derived_object.cpp  derived_object.hpp  main.cpp  object.hpp
